# validate-public

./: .gitignore  README.md  config.json  pyproject.toml
csv_validator/: aws_helpers.py  validate.py
csv_validator/misc/: datagen.py  formatchanger.py
