[tool.poetry]
name = "csv-validator"
version = "0.1.0"
description = ""
authors = ["Ferenc Kiss <kissferenc1988@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.10.4"
email-validator = "^2.2.0"
tzdata = "^2024.2"
polars = "^1.19.0"
faker = "^33.3.0"
pytest-cov = "^6.0.0"
s3fs = {extras = ["boto3"], version = ">=2024.10.0"}
boto3 = "*"
botocore = "*"
psutil = "^6.1.1"
pylint = "^3.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
